syntax = "proto3";

package v2ray.core.transport.internet.request.roundtripper.httprt;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Request.Roundtripper.httprt";
option go_package = "github.com/v2fly/v2ray-core/v4/transport/internet/request/roundtripper/httprt";
option java_package = "com.v2ray.core.transport.internet.request.roundtripper.httprt";
option java_multiple_files = true;

message ClientConfig {
  HTTPConfig http = 1;
}

message ServerConfig {
  HTTPConfig http = 1;
  bool no_decoding_session_tag = 2;
}

message HTTPConfig {
  string path = 1;
  string urlPrefix = 2;
}